added additional features with help

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <title>Light Bright/</title>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
       <link rel="stylesheet" href="css/main.css">
     <head>
       <body>
+       <div class="row-controls">
+      Rows:
+        <span id="num-rows">10</span>
+        <span class="plus"><i class="fa fa-arrow-up"></i></span>
+        <span class="minus"><i class="fa fa-arrow-down"></i></span>
+     </div>
+    <div class="col-controls">
+      Columns:
+      <span id="num-cols">10</span>
+      <span class="plus"><i class="fa fa-arrow-up"></i></span>
+      <span class="minus"><i class="fa fa-arrow-down"></i></span>
+    </div>
         <div class="container">
-          
+
         </div>
       <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
       <script src="js/app.js"></script>
